Add container class to one element. Add custom css to one class.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
     font-size: large; }
   #projects .color-proj {
     color: #78C2AD; }
+  #projects .projectName {
+    color: black; }
 
 #circleAvatar {
   position: relative;
