--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,7 @@
 #projects {
     background-image: url("../images/projects_background.jpg");
+    background-color: rgba(255, 255, 255, 0.4);
+    background-blend-mode: lighten;
     
     .card{
         border: 1px solid whitesmoke;
